# infrastructure/restapi/controllers/transaction/responses.go
@@ -1,0 +1,6 @@
+package transaction
+
+// MessageResponse is a struct that contains the response body for the message
+type MessageResponse struct {
+	Message string `json:"message"`
+}
